# tube_amplifier_power_supply

./: .gitignore  .gitmodules  README.md  fpga_communication_sources.tcl  ghdl_compile_libraries.bat  list_of_sources.tcl  test_hw_with_uart.py  tubepsu_addresses_pkg.vhd  vunit_run_tube_amp.py
cyclone_10/ip_components/fifo/: uart_fifo.qip  uart_fifo.vhd  uart_fifo_inst.vhd
cyclone_10/ip_components/u10_clocks/: main_pll.qip  main_pll.vhd
cyclone_10/source_cl10/: cl10_pll_wrapper.vhd
cyclone_10/tcl/: cl10_tube_psu_v5.tcl
hil_simulation/: CMakeLists.txt
hil_simulation/cpp_sources/: modulator.cpp  modulator.hpp
hil_simulation/cpp_sources/carrier_generation/: carrier_generation.cpp  carrier_generation.hpp
hil_simulation/cpp_sources/deadtime/: deadtimecontroller.cpp  deadtimecontroller.hpp
hil_simulation/cpp_sources/feedback_control/: current_control.cpp  current_control.hpp  voltage_control.cpp  voltage_control.hpp
hil_simulation/cpp_sources/feedback_control/pi_control/: pi_control.cpp  pi_control.hpp
hil_simulation/cpp_sources/modulator/: modulator.cpp  modulator.hpp
hil_simulation/qspice_ref_models/: CMakeLists.txt  boost_ref.qsch  boost_w_emi_ref.qsch  constants.hpp  dpwm.cpp  modulator.cpp  modulator.hpp  plot_boost_ref.py
hil_simulation/qspice_ref_models/boost_simulation/: boost_closed_loop.cpp  boost_closed_loop.qsch  boost_open_loop.cpp  boost_open_loop.qsch  boost_voltage_closed_loop.cpp  boost_voltage_closed_loop.qsch  plot_boost_simulations.py  rtl_boost_reference.cpp  rtl_boost_reference.qsch
hil_simulation/qspice_ref_models/dual_half_bridge/: dual_half_bridge.cpp  dual_half_bridge.qsch  plot_dhb.py
hil_simulation/qspice_ref_models/guitar_power_supply/: boost_voltage_closed_loop.cpp  guitar_power_supply.cpp  guitar_power_supply.qsch
hil_simulation/qspice_ref_models/heater_llc/: heater_llc.cpp  heater_llc.qsch  plot_heater_llc.py
hil_simulation/qspice_ref_models/pfc/: pfc.cpp  pfc.qsch
hil_simulation/supply_model/: boost_rtl_tb.vhd  pfc_model_pkg.vhd  rtl_model_tube_power_tb.vhd  supply_model_tb.vhd
lfe5u/constraints/: tubepsu_constraints.lpf
lfe5u/ip_cores/: ip_cores.sbx  ip_cores_tmpl.v  ip_cores_tmpl.vhd
lfe5u/ip_cores/multiplier_18x18/: generate_core.tcl  generate_ngd.tcl  multiplier_18x18.arearep  multiplier_18x18.jhd  multiplier_18x18.lsedata  multiplier_18x18.ngd  multiplier_18x18.ngo  multiplier_18x18.sort  multiplier_18x18.sym  multiplier_18x18.synproj  multiplier_18x18.vhd  multiplier_18x18_lse.twr  multiplier_18x18_prim.v  multiplier_18x18_tmpl.vhd  tb_multiplier_18x18_tmpl.vhd  xxx_lse_cp_file_list  xxx_lse_sign_file
lfe5u/ip_cores/multiplier_18x18/.vdbs/: dbStat.txt  multiplier_18x18_rtl.vdb  multiplier_18x18_tech.vdb
lfe5u/source_ecp5/: ecp5_pll_wrapper.vhd
lfe5u/tcl_scripts/: ecp5_compile.tcl
python_scripts/: plot_boost.py  plot_boost_rtl_vs_qspice.py  plot_model.py  plot_model_vs_qspice.py
source/common/register_shifts/: register_shifts_pkg.vhd
source/dsp/feedback_control/: feedback_control.vhd  feedback_control_pkg.vhd
source/dsp/multiplier/: multiplier.vhd
source/dsp/multiplier/simulation/: tb_multiplier.vhd
source/dsp/nr_division/simulation/: tb_nr_div.vhd
source/dsp/sincos/: sincos.vhd
source/dsp/sincos/simulation/: tb_sincos.vhd
source/top/: ecp5_top.vhd  s7_top.vhd  system_clocks_pkg.vhd  top.vhd
source/top/system_control/: system_control.vhd  system_control_internal_pkg.vhd  system_control_pkg.vhd
source/top/system_control/component_interconnect/: component_interconnect.vhd  component_interconnect_pkg.vhd  component_interconnect_w_comm.vhd
source/top/system_control/component_interconnect/external_adc_driver/: max_11115.vhd
source/top/system_control/component_interconnect/external_adc_driver/simulation/: tb_max_11115.vhd
source/top/system_control/component_interconnect/measurement_interface/onboard_ad_control/simulation/: tb_onboard_adc.vhd
source/top/system_control/component_interconnect/power_supply_control/: power_supply_control.vhd
source/top/system_control/component_interconnect/power_supply_control/dhb_control/: dhb_control.vhd
source/top/system_control/component_interconnect/power_supply_control/dhb_control/phase_modulator/: deadtime.vhd  phase_modulator.vhd  phase_modulator_pkg.vhd
source/top/system_control/component_interconnect/power_supply_control/dhb_control/phase_modulator/simulation/: tb_phase_modulator.vhd
source/top/system_control/component_interconnect/power_supply_control/llc_control/: arch_llc_pi_control.vhd  llc_control.vhd  llc_control_internal_pkg.vhd
source/top/system_control/component_interconnect/power_supply_control/llc_control/llc_modulator/: llc_modulator.vhd  llc_modulator_pkg.vhd
source/top/system_control/component_interconnect/power_supply_control/pfc_control/: arch_pfc_current_control.vhd  arch_pfc_voltage_control.vhd  pfc_control.vhd
source/top/system_control/component_interconnect/power_supply_control/pfc_control/pfc_modulator/: pfc_modulator.vhd
source/top/system_control/component_interconnect/power_supply_control/pfc_control/pfc_modulator/simulation/: tb_pfc_modulator.vhd
source/top/system_control/led_driver/: led_driver.vhd  led_driver_pkg.vhd
spartan_7/s7_source/: s7_pll_wrapper.vhd
spartan_7/tcl_scripts/: full_run.tcl  init_build_environment.tcl  ipgen_main_pll.tcl  ipgen_mult_18x18.tcl  load_image.tcl  place_io.tcl  program_bitstream_file.tcl  program_flash.tcl  program_functions.tcl  read_sources.tcl
testbenches/dhb_modulator/: dhb_modulator_tb.vhd  phase_modulator_tb.vhd
testbenches/measurement_interface/: measurement_interface_tb.vhd
